# multi-agents-agent

./: Dockerfile  azure.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: main.py
app/routers/: chat.py  metrics.py  voice.py
app/schemas/: healthhubai.py  metrics.py
app/services/arize/: arize.py
app/services/openai/: agents.py  openai_agents_stream.py  openai_agents_stream_mcp.py  streaming_test.py  tools.py
app/services/speech/: speech_to_text.py  text_to_speech.py
docs/: DOCUMENATION.md
scripts/: deploy_backendapi_container.ps1  functions.ps1  start.ps1  start.sh
